kubernetes/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  namespace: emp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: emp.dev.neysho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-svc
                port:
                  number: 80
